syntax = "proto3";
option go_package = "facade/tsdb";
package tsdb;


message TsdbHeader{
    uint32 items = 1;
    uint32 version = 2;
}

message TsdbMeta{
    uint64 start = 1;
    uint64 end = 2;
    int32  block = 3;
    int64  offset = 4;
    int32  items = 5;
}

message TsdbIndex{
    uint64 timestamp = 1;
    int32  block = 2;
    int64  offset = 3;
    int32  len = 4;
}

message TsdbData{
    uint64 timestamp = 1;
    bytes  data = 2;
}